--- a/package.json
+++ b/package.json
@@ -1,28 +1,37 @@
 {
   "name": "beees",
-  "version": "0.1.0",
+  "version": "0.0.1",
   "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
-    "react-test-renderer": "16.3.1"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest",
+    "web": "react-scripts start",
+    "build": "react-scripts build",
+    "test:web": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "electron": "react-scripts start & electron ."
   },
   "dependencies": {
-    "expo": "^27.0.1",
     "njsx": "^3.0.1",
     "njsx-react-native": "^1.0.1",
     "react": "16.3.1",
-    "react-native": "~0.55.2"
-  }
+    "react-art": "^16.4.1",
+    "react-dom": "^16.2.0",
+    "react-native": "^0.55.4",
+    "react-native-svg": "^6.3.1",
+    "react-native-web": "^0.8.6",
+    "react-native-web-extended": "^0.0.7"
+  },
+  "devDependencies": {
+    "babel-jest": "23.2.0",
+    "babel-plugin-transform-react-remove-prop-types": "0.4.10",
+    "babel-preset-react-native": "4.0.0",
+    "jest": "23.2.0",
+    "react-scripts": "1.1.0",
+    "react-test-renderer": "16.3.1"
+  },
+  "jest": {
+    "preset": "react-native"
+  },
+  "main": "index.electron.js"
 }
