--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-web": "^0.8.6",
     "react-native-web-extended": "^0.0.7",
     "style-loader": "0.19.0",
+    "svgs": "^3.2.1",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.6.2",
     "webpack": "3.8.1",
